# conjure

./: .env.development  .gitignore  LICENSE  README.md  pyproject.toml
conjure/: __init__.py  conjure_client.py
conjure/models/annotation/: __init__.py  annotations.py  bounding_box.py  classification.py  object_detection.py
test/: test_conjure_client.py
